<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"

    tools:context=".Register">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="468dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="273dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/gradientbackground"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:text="REGISTER"
                android:textColor="#fff"
                android:textSize="21sp"
                android:textStyle="bold" />
        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="351dp"
            android:layout_height="380dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:id="@+id/email_register_form">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="389dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">


                    <EditText
                        android:id="@+id/name_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:hint="@string/name_register"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:singleLine="true" />


                    <EditText
                        android:id="@+id/email_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />


                    <EditText
                        android:id="@+id/password_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:hint="@string/password"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />


                    <EditText
                        android:id="@+id/confirm_password_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:hint="@string/confirm_password_register"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />


                    <Button
                        android:id="@+id/sign_up_button_register"
                        style="?android:textAppearanceSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:background="@drawable/buttonstyle1"
                        android:text="@string/register_button"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/existing_user_sign_in_button"
            style="?android:textAppearanceSmall"
            android:background="@drawable/buttonstyle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/existing_user_login_button"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</LinearLayout>