<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashBoard"
    android:background="@color/gray_light"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="272dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="207dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="#09c6df"
            android:orientation="vertical">
            <Button
                android:id="@+id/logout_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/buttonstyle2"
                android:text="Logout" />
            <TextView
                android:id="@+id/dashboard_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:text="DASHBOARD"
                android:textColor="#fff"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>
        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="4dp">
            <LinearLayout
                android:id="@+id/accesskeydownloadform"
                android:layout_width="360dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:orientation="horizontal"
                    android:paddingLeft="25dp">
                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@drawable/ic_vpn_key_black_24dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="20dp"
                        android:text="@string/download_key"
                        android:textSize="35px"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:paddingLeft="25dp">
                    <EditText
                        android:id="@+id/access_key_download"
                        android:layout_width="266dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_key"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:imeOptions="actionDone" />
                    <ImageButton
                        android:id="@+id/download_dashboard"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/buttonstyle1"
                        android:src="@drawable/ic_cloud_download_white_24dp" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_marginBottom="4dp">
        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:paddingLeft="25dp">
                <ImageButton
                    android:id="@+id/browse_files"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/buttonstyle1"
                    android:src="@drawable/ic_open_in_browser_white_24dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/select_your_file"
                    android:textSize="35px"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:orientation="horizontal"
                android:paddingLeft="25dp">
                <TextView
                    android:id="@+id/your_file"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="40px" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/access_key_upload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/enter_the_access_key"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />
                <EditText
                    android:id="@+id/radius"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/enter_the_radius"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="number" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginTop="5dp">
        <Button
            android:id="@+id/upload_files_dashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:background="@drawable/buttonstyle1"
            android:text="@string/upload_a_file"
            android:textColor="#fff" />
    </LinearLayout>
</LinearLayout>